syntax = "proto3";

package proto.clientpb;

option go_package = "AKFAK/proto/clientpb";

import "proto/producepb/produce.proto";
import "proto/metadatapb/metadata.proto";
import "proto/consumepb/consume.proto";

service ClientService {
  /* Producer RPC */
  rpc Produce(stream producepb.ProduceRequest)
      returns (stream producepb.ProduceResponse) {}
  rpc WaitOnMetadata(metadatapb.MetadataRequest)
      returns (metadatapb.MetadataResponse) {}
  /* Producer RPC */

  /* Consumer RPC */
  rpc Consume(stream consumepb.ConsumeRequest)
      returns (stream consumepb.ConsumeResponse) {}
  rpc GetReplicas(consumepb.GetReplicasRequest)
      returns (consumepb.GetReplicasResponse) {}
  /* Consumer RPC */
}
